lab1/Test/L1-A-7-86.output
Error Type A at Line 6
Error Type A at Line 11
Error Type A at Line 22
Error Type A at Line 23
