lab1/Test/L1-A-7-86.cmm
struct Qz4_kPD9HWErgGgl {
}v_4tHXwb_fiLbgNi04B [ 1625221413 ] 
;
struct {
}YD_AxZAkbD508bHpw ( int RY , struct gaYvclOLFqdXU0R 
  z9riVx3DdyybG %) {
  float RIVS6hNENdd4mmX9pY = OEacfhL || sj8ZwlfnZwL2H4BgigD 
    == zgh7ZlpEwAZKR - RzSNXz33hl / ! Txp15V1ujgNTV3 [ 
    pvJOrwz9xZLh = Necsg != lBwhxop48A6hcbxA0i + JZg * 
    - - - - mqnbz5IP9cDGB ( pGzN5q9weRuqYVnwD2bZ , IFl9IC 
    <= ih - ( ms8rm #= g_Z96XBv3kO8BRHd4sp || _7FdKMgRij4m_Np 
    < sVz5X3c - sLqjno2HartcgXqQ ( NP8sAWHCWX6 = JPVYMHQG4J6ssW8y 
    || kwH0IDkx >= eusvouoBafJvr30egUs * dgT1W5cZti05E3WM 
    [ Uwqk6 = sGg4NKeDPbv1LQqETn > j_r_q ( IZk7ykY , 1289698402.2037281676 
    ) * ! _J ] ) ) ) . yWuc09g3 && 1933269179 ] * - UQiIQw 
    ( ) , vlPE8H2bcVBcCfaory ;
}
int ;
int zshMcLqlib81R ( ) {
  kLL2KmJ4 ;
  if ( XL2uagSkFS4tqKZsGt )   liBeMEPjZcqyr5YkgAb1 
    ;^
\else   if ( U )   while ( N721Oi ) {
    if ( rif8FfIjjVP3veY5Wj )     I1u9Fh7OoG ;
else     return H4 ;

    if ( oHzptfF6OE )     RwObmF ;

  }


}
int pvzjehdD8C , S 

;
